detect inner conner of chessboard

--- a/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj
+++ b/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj
@@ -145,7 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="sample.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
