modify Travis-ci setting for correcting folder paths.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ jobs:
       - export CC=/usr/bin/gcc-7
       - export CXX=/usr/bin/g++-7
       - gcc -v && g++ -v
-      - cd Qt
+      - cd ChessVisualizer
     script:
       - qmake -project -Wall 
-      - qmake -makefile -Wall ToyProject.pro
+      - qmake -makefile -Wall ChessVisualizer.pro
       - make
