--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: cpp
 compiler: gcc
 
+cache:
+  directories:
+    - opencv/
+
 dist: trusty
 sudo: require
 
@@ -14,6 +18,28 @@ addons:
 
 jobs:
  include:
+  - stage: OpenCV
+    install:
+      - sudo apt-get install build-essential
+      - sudo apt-get install libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev
+    before_script:
+      - bash shell/build_opencv.sh
+      - cd opencv/build/
+      - sudo make install
+      - sudo sh -c 'echo "/usr/local/lib" > /etc/ld.so.conf.d/opencv.conf'
+      - sudo ldconfig
+      - echo "OpenCV installed."
+      
+      - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
+      - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
+      - export CC=/usr/bin/gcc-7
+      - export CXX=/usr/bin/g++-7
+      - gcc -v && g++ -v
+      - cd ../../
+      - cd OpenCV_practice/OpenCV_practice
+    script:
+      - cmake .
+      - make
   - stage: Qt
     install: 
       - sudo apt-get update
