--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
       - sudo apt-get install build-essential
       - sudo apt-get install libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev
     before_script:
-      - bash shell/build_opencv.sh
+      - bash build_opencv.sh
       - cd opencv/build/
       - sudo make install
       - sudo sh -c 'echo "/usr/local/lib" > /etc/ld.so.conf.d/opencv.conf'
