--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Created by https://www.gitignore.io/api/qt,c++,opencv,windows,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=qt,c++,opencv,windows,visualstudio,visualstudiocode
 
+# Qt autosave
+*.cpp*
+!*.cpp
+*.h*
+!*.h
+
 ### User ###
 *.jpg
 
