--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ jobs:
   - stage: Qt
     install: 
       - sudo apt-get purge --auto-remove libqt4-dev
+      - sudo apt-get install qtdeclarative5-dev
       - sudo apt-get install qt5-default
       - sudo apt-get install qt5-qmake      
       - sudo apt-get update
