modify travis qt setting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,9 @@ jobs:
       - make
   - stage: Qt
     install:
-      - sudo apt-get install qtdeclarative5-dev
-      - sudo apt-get install qt5-default
-      - sudo apt-get install qt5-qmake      
-      - sudo apt-get update
+      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+      - sudo apt-get update -qq
+      - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev   
     before_script:
       - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
       - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
