--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ jobs:
       - make
   - stage: Qt
     install:
-      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-      - sudo apt-get update -qq
-      - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev   
+      - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-trusty
+      - sudo apt-get -qy update
+      - sudo apt-get install -qy qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev   
     before_script:
       - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
       - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
