--- a/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj
+++ b/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj
@@ -145,7 +145,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ImageProcessor.cpp" />
     <ClCompile Include="sample.cpp" />
+    <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="Video.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DefaultPath.h" />
+    <ClInclude Include="ImageProcessor.h" />
+    <ClInclude Include="MathUtils.h" />
+    <ClInclude Include="Observer.h" />
+    <ClInclude Include="Observerble.h" />
+    <ClInclude Include="Vector2.h" />
+    <ClInclude Include="Video.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
