--- a/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj.filters
+++ b/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="sample.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Video.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -27,12 +24,15 @@
     <ClCompile Include="Vector2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenCVController.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Observer.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="Observerble.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Video.h">
@@ -48,6 +48,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="DefaultPath.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Observable.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenCVController.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
