--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,6 @@ jobs:
       - sudo make install
       - sudo sh -c 'echo "/usr/local/lib" > /etc/ld.so.conf.d/opencv.conf'
       - sudo ldconfig
-      - echo "OpenCV installed."
       
       - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
       - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
@@ -42,8 +41,10 @@ jobs:
       - make
   - stage: Qt
     install: 
+      - sudo add-apt-repository --yes ppa:beineri/opt-qt-5.10.1-trusty
       - sudo apt-get update
-      - sudo apt-get install qt5-qmake
+      - sudo apt-get install qt5-qmake qt510base qt510script qt510declarative qt510tools qt510x11extras qt510svg qt510quickcontrols2
+      - source /opt/qt510/bin/qt510-env.sh
     before_script:
       - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
       - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
@@ -52,6 +53,5 @@ jobs:
       - gcc -v && g++ -v
       - cd ChessVisualizer
     script:
-      - qmake -project -Wall 
-      - qmake -makefile -Wall ChessVisualizer.pro
+      - /opt/qt510/bin/qmake
       - make
