--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,19 @@ addons:
 
 jobs:
  include:
+  - stage: Network
+    install:
+      - sudo apt-get install libboost-all-dev
+    before_script:
+      - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
+      - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
+      - export CC=/usr/bin/gcc-7
+      - export CXX=/usr/bin/g++-7
+      - gcc -v && g++ -v
+      - cd NetworkLibrary/NetworkLibrary
+    script:
+      - cmake .
+      - make
   - stage: OpenCV
     install:
       - sudo apt-get install build-essential
