add Server class into the project.

--- a/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj
+++ b/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj
@@ -123,11 +123,13 @@
   <ItemGroup>
     <ClCompile Include="Address.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Server.cpp" />
     <ClCompile Include="SocketConnection.cpp" />
     <ClCompile Include="SocketWrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Address.h" />
+    <ClInclude Include="Server.h" />
     <ClInclude Include="SocketConnection.h" />
     <ClInclude Include="SocketWrapper.h" />
   </ItemGroup>
