--- a/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj.filters
+++ b/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="SocketConnection.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Server.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SocketWrapper.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="SocketConnection.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Server.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
