upgrade cmake cxx version for the network.

--- a/NetworkLibrary/NetworkLibrary/CMakeLists.txt
+++ b/NetworkLibrary/NetworkLibrary/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.1)
+set (CMAKE_CXX_STANDARD 17)
 
 project( NetworkLibrary )
 find_package( Boost REQUIRED system thread date_time regex serialization )
