--- a/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj.filters
+++ b/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Client.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TransmissionService.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SocketWrapper.h">
@@ -51,6 +54,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Client.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TransmissionService.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
