--- a/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj.filters
+++ b/NetworkLibrary/NetworkLibrary/NetworkLibrary.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="TransmissionService.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="NetworkError.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SocketWrapper.h">
@@ -57,6 +60,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TransmissionService.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="NetworkError.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ErrorCode.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
