--- a/NetworkLibrary/NetworkLibrary/CMakeLists.txt
+++ b/NetworkLibrary/NetworkLibrary/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.13)
 set (CMAKE_CXX_STANDARD 17)
 
 project( NetworkLibrary )
 find_package( Boost REQUIRED system thread date_time regex serialization )
-include_directories( ${BOOST_INCLUDE_DIRS} )
+include_directories( ${Boost_INCLUDE_DIRS} )
 
 message("Boost Library Path: ${Boost_LIBRARIES}")
 message("Boost Include Header Path: ${Boost_INCLUDE_DIR}")
