modify cmake setting for avoiding boost link errors.

--- a/NetworkLibrary/NetworkLibrary/CMakeLists.txt
+++ b/NetworkLibrary/NetworkLibrary/CMakeLists.txt
@@ -10,5 +10,6 @@ message("Boost Include Header Path: ${Boost_INCLUDE_DIR}")
 
 aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR} SOURCES )
 add_executable( NetworkLibrary ${SOURCES} )
+add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
 
 target_link_libraries( NetworkLibrary ${Boost_LIBRARIES} )
