--- a/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj.filters
+++ b/OpenCV_practice/OpenCV_practice/OpenCV_practice.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="OpenCVController.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Block.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Observer.h">
@@ -51,6 +54,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="OpenCVController.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Block.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
