--- a/ChessPieceDetector/ChessPieceDetector/ChessPieceDetector.vcxproj
+++ b/ChessPieceDetector/ChessPieceDetector/ChessPieceDetector.vcxproj
@@ -22,8 +22,9 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{00C2DA58-72E5-4E36-8C3D-2928A615B7E4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>OpenCVpractice</RootNamespace>
+    <RootNamespace>ChessPieceDetector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>ChessPieceDetector</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
