--- a/InteractionChessLauncher/InteractionChessLauncher/InteractionChessLauncher.vcxproj
+++ b/InteractionChessLauncher/InteractionChessLauncher/InteractionChessLauncher.vcxproj
@@ -142,7 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ChildProcess.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ChildProcess.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
