add icon to the relay.

--- a/RobotNetworkRelay/RobotNetworkRelay/RobotNetworkRelay.vcxproj
+++ b/RobotNetworkRelay/RobotNetworkRelay/RobotNetworkRelay.vcxproj
@@ -144,6 +144,15 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RobotNetworkRelay.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\favicon (1).ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
