--- a/RobotNetworkRelay/RobotNetworkRelay/RobotNetworkRelay.vcxproj.filters
+++ b/RobotNetworkRelay/RobotNetworkRelay/RobotNetworkRelay.vcxproj.filters
@@ -19,4 +19,19 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RobotNetworkRelay.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\favicon (1).ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
