--- a/ChessPieceDetector/ChessPieceDetector/ChessPieceDetector.vcxproj.filters
+++ b/ChessPieceDetector/ChessPieceDetector/ChessPieceDetector.vcxproj.filters
@@ -59,5 +59,18 @@
     <ClInclude Include="Block.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ChessPieceDetector.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\favicon.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
